[package]
name = "nom-whitespace"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
description = "whitespace consuming nom combinators"
license = "MIT"
repository = "https://github.com/rust-bakery/nom-whitespace"
readme = "README.md"
documentation = "https://docs.rs/nom-whitespace"
keywords = ["parser", "parser-combinators", "parsing"]
categories = ["parsing"]

include = [
  "LICENSE",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs"
]

[dependencies]
nom = "^4"
